--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<h1>Website<h1>
-		<h3>My example website<h1>
-	</head>
-
 	<body>
-		<p>This is a paragraph. You can see the souce code of this website by clicking Ctrl + U.
-		</p>
+		<head>
+			<h1>Website<h1>
+			<h3>My example website</h3>
+		</head>
+		<head>
+			<p>This is a paragraph. You can see the souce code of this website by clicking Ctrl + U.
+			</p>
+		</head>
 	</body>
 </html> 
